argocd/env-app/overlays/prod/patch-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: env-app
spec:
  template:
    spec:
      containers:
        - name: env-app
