argocd/env-app/overlays/prod/patch-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: env-app-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    external-dns.alpha.kubernetes.io/target: env-app.k3s-3.monopot.xyz
    kubernetes.io/ingress.class: traefik 
spec:
  rules:
    - host: k3s-3.home  # gets patched
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: env-app
                port:
                  number: 80
